LOG4J2-1297 latency test improvements